# progr_animals

./: CMakeLists.txt
progr_animals/: CMakeLists.txt  progr_animals.cpp  progr_animals.h
